--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -84,7 +84,7 @@
 
   .header-scrolled {
     background-color: var(--primary-color);
-    transition: background-color 0.3s ease-in-out; /* Smooth transition for the color change */
+    /* transition: background-color 0.3s ease-in-out; */
 }
 
   header::after {
